# test

./: .gitignore  .nojekyll  README.md  index.html  process.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/ISSUE_TEMPLATE/: bug.md  exploratory.md
.github/workflows/: deploy.yml  prepare-release.yml  run-tests.yml  set-pr-title.yml  validate-commits-prs.yml
docs/: _quarto.yml  index.qmd  process.md
reference/: example.html  example_two.html  index.html  src.html
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/: example.py  example_two.py  main_funcs.py
tests/: test_example.py
